--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "react-task",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mfahad1.github.io/react-task/",
   "dependencies": {
     "fuzzy-search": "^2.0.1",
     "react": "^16.3.2",
+    "gh-pages": "^1.1.0",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
@@ -12,6 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
